...
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_search_24"/>
                <EditText
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:id="@+id/search_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Search User Here"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginHorizontal="20dp"/>


...
