<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="80dp"
        android:gravity="left|center"
        android:id="@+id/root"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/avatar"
            app:cardCornerRadius="40dp"
            android:layout_width="80dp"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/profile_pict"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:src="#000000"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/name_tv"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tesssss"
            android:textStyle="bold"
            android:textSize="18sp"
            />


    </LinearLayout>
</layout>